--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h2>KATE SPADE</h2>
         <h3>SATURDAY</h3>
       </div>
+      <div id="border-1"></div>
       <div id="show">
         <a href="">NEW</a>
         <a href="">CLOTHING</a>
@@ -23,6 +24,7 @@
         <a href="">FEATURED SHOPS</a>
         <a href="">SALE</a>
       </div>
+      <div id="border-2"></div>
       <div id="text-1">GOOD THINGS COME IN PARIS:</div>
       <div id="text-2">
         <p id="text-3">20% OFF*</p>
@@ -45,6 +47,16 @@
           hic harum asperiores!
         </p>
       </div>
+
+      <div id="border-3"></div>
+      <div id="text-8">
+        <h6 id="text-9">FOLLOW US:</h6>
+
+        <div><img src="../ad-task/images/facebook.png" class="logo" /></div>
+        <div><img src="../ad-task/images/twitter-logo.png" class="logo" /></div>
+        <div><img src="../ad-task/images/instagram.png" class="logo" /></div>
+      </div>
+      <div id="border-4"></div>
     </div>
   </body>
 </html>
